# bancho.py

./: .coveragerc  .deepsource.toml  .dockerignore  .env.example  .env.test  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CODEOWNERS  CODE_STYLE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  Makefile  Pipfile  README.md  README_CN.md  README_DE.MD  README_IT.md  alembic.ini  bg_loops.py  config.sample.py  console.py  constants.py  db.sql  docker-compose.cloudflared.yml  docker-compose.test.yml  docker-compose.yml  docker.env.example  handlers.py  logging.yaml.example  main.py  manual.env.example  mypy.ini  nginx.conf  osu_trainer.py  packets.py  pyproject.toml  (+7 more)
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.md  custom.yml
.github/workflows/: docker-build.yaml  lint.yaml  lock-requirements.yaml  require-checklist.yaml  sync-docs.yaml  test.yaml
alembic/: env.py
alembic/versions/: 158030827560_base_schema.py
anticheat/: Program.cs  ScoreQueue.cs  anticheat.csproj  run.sh
anticheat-sender/: Program.cs  anticheat-sender.csproj
anticheat/scripts/: install-dotnet.sh
anticheat/src/: AnticheatProcessor.cs  BpyAPI.cs  Config.cs  Program.cs  ScoreQueue.cs
app/: __init__.py  _typing.py  bg_loops.py  bss.py  builtin_bot.py  commands.py  context.py  db_models.py  discord.py  encryption.py  errors.py  housekeeping.py  irc.py  logging.py  osz2.py  packets.py  paths.py  responses.py  services.py  sessions.py  settings.py  settings_utils.py  state.py  telemetry.py  timer.py  utils.py  validation.py
app/adapters/: database.py  email.py  score_submission.py
app/anticheat/: anticheat.py  pp_caps.py
app/api/: __init__.py  ava.py  cho.py  dependencies.py  init_api.py  map.py  middlewares.py  osu.py
app/constants/: __init__.py  beatmap_statuses.py  clientflags.py  commands.py  countries.py  gamemodes.py  grades.py  leaderboard_types.py  level.py  mods.py  multiplayer.py  osu_client_details.py  privileges.py  regexes.py  score_statuses.py  scoring_metrics.py  types.py
app/menus/: __init__.py  default.py
app/misc/: __init__.py  context.py  dependency_manager.py  utils.py
app/objects/: __init__.py  achievement.py  beatmap.py  channel.py  clan.py  collections.py  geolocation.py  glob.py  leaderboard.py  match.py  menu.py  models.py  network_adapters.py  nomination_requests.py  player.py  score.py
app/repositories/: __init__.py  access_tokens.py  achievements.py  authorization_codes.py  beatmap_sets.py  beatmaps.py  channel_memberships.py  channels.py  clans.py  client_hashes.py  comments.py  error_reporting.py  factory.py  favourite_beatmap_sets.py  favourites.py  first_place_scores.py  generic.py  ingame_logins.py  legacy.py  logs.py  mail.py  mails.py  map_requests.py  mappools.py  maps.py  mapsets.py  multiplayer_matches.py  multiplayer_slots.py  network_adapters.py  nomination_requests.py  notes.py  osu_sessions.py  osuapi_v1.py  ouath_clients.py  performance_reports.py  players.py  pp_aggregates.py  ratings.py  refresh_tokens.py  relationships.py  (+8 more)
app/services/: accounts.py  bancho.py  beatmap_leaderboards.py  clans.py  client_integrity.py  comments.py  direct_search.py  favourites.py  mail.py  maps.py  osu_client_authentication.py  osu_web.py  performance.py  players.py  public_api.py  replays.py  score_leaderboards.py  score_submission.py  scores.py  screenshots.py  tourney_pools.py
app/state/: __init__.py  cache.py  services.py  sessions.py  settings.py  website.py
app/tests/: conftest.py  test_packet_serialization.py  test_usecases.py  test_validation.py
app/usecases/: __init__.py  achievements.py  anticheat.py  beatmap_sets.py  beatmaps.py  channels.py  clans.py  client_versioning.py  comments.py  dependencies.py  direct.py  email.py  error_reporting.py  favourite_beatmap_sets.py  gdpr.py  geolocation.py  leaderboards.py  mail.py  mappools.py  maps.py  menus.py  multiplayer.py  nomination_requests.py  notes.py  osu_sessions.py  performance.py  players.py  rabbitmq.py  replays.py  score_leaderboards.py  score_submission.py  scores.py  screenshots.py  sessions.py  user_achievements.py  users.py
charts/banchopy/: .gitignore  Chart.yaml  README.md  values.yaml
constants/: clientflags.py  commands.py  countries.py  gamemodes.py  mods.py  privileges.py  regexes.py  types.py
db/: dbConnector.py
discordbot/cogs/: _admin.py  admin.py  misc.py  osu.py
discordbot/utils/: constants.py  embed_utils.py  slashcmd_options.py  utils.py
docker/: Dockerfile  nginx.conf
docker/banchopy/: Dockerfile
docker/nginx-with-geoip2/: main.conf
domains/: ava.py  cho.py  map.py  osu.py
events/: api.py  bancho.py  events.py  web.py
ext/: Caddyfile  config.sample.py  db.sql  docker-nginx.conf.example  gulag.service  manual-nginx.conf.example  nginx.conf  nginx.conf.example  requirements.txt  updates.sql
migrations/: base.sql  migrations.sql  migrator.py
misc/: context.py  updater.py  utils.py
mount/app/: __init__.py  bg_loops.py  db_models.py  services.py  sessions.py  settings.py  utils.py
mount/tests/: conftest.py
objects/: achievement.py  beatmap.py  channel.py  clan.py  collections.py  glob.py  match.py  menu.py  player.py  score.py  server.py  status.py  web.py
pp/: owoppai.py
scripts/: install-nginx-config.sh  run-database-migrations.sh  run-tests.sh  start.sh  start_redis.sh  start_required_services.sh  start_server.sh
testing/sample_data/: sample_beatmap_data.py  vivid_osu_file.osu
tests/: conftest.py  factories.py  test_packet_serialization.py
tests/unit/: commands_test.py  domain_helpers_test.py  packets_test.py  score_submission_usecase_test.py  test_packets.py
tools/: docker_install.sh  enable_geoip_module.sh  gen_fake_data.py  generate_cf_certs.sh  generate_cf_dns_records.sh  local_cert_generator.sh  migrate_logs.py  migrate_v420.py  newstats.py  proxy.py  recalc.py  start_server.sh
tools/dev/: generate_cf_dns_records.sh  (+1 more)
utils/: catgirlmoe.py  misc.py  oppai_api.py  recalculator.py  updater.py
(+220 files in other folders)
