[tool.mypy]
strict = true
exclude = ["tests", "venv"]
disallow_untyped_calls = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
    "redundant-expr",
    "possibly-undefined"
]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aiomysql.*",
    "mitmproxy.*",
    "py3rijndael.*",
    "timeago.*",
    "pytimeparse.*",
    "cpuinfo.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_requird_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_single_line = true
profile = "black"

[tool.poetry]
package-mode = false
name = "bancho-py"
version = "5.3.0"
description = "An osu! server implementation optimized for maintainability in modern python"
authors = ["Akatsuki Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
async-timeout = "4.0.3"
bcrypt = "4.1.2"
datadog = "0.48.0"
fastapi = "0.109.2"
orjson = "3.9.13"
psutil = "5.9.8"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
requests = "2.31.0"
timeago = "1.0.16"
uvicorn = "0.27.1"
uvloop = { markers = "sys_platform != 'win32'", version = "0.19.0" }
winloop = { platform = "win32", version = "0.1.1" }
py3rijndael = "0.3.3"
pytimeparse = "1.1.8"
pydantic = "2.6.1"
redis = { extras = ["hiredis"], version = "5.0.1" }
sqlalchemy = ">=1.4.42,<1.5"
akatsuki-pp-py = "1.0.5"
cryptography = "42.0.2"
tenacity = "8.2.3"
httpx = "0.26.0"
py-cpuinfo = "9.0.0"
pytest = "8.0.0"
pytest-asyncio = "0.23.5"
asgi-lifespan = "2.1.0"
respx = "0.20.2"
tzdata = "2024.1"
coverage = "^7.4.1"
databases = { version = "^0.8.0", extras = ["mysql"] }
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.1"
black = "24.1.1"
isort = "5.13.2"
autoflake = "2.2.1"
types-psutil = "5.9.5.20240205"
types-pymysql = "1.1.0.1"
types-requests = "2.31.0.20240125"
mypy = "1.8.0"
types-pyyaml = "^6.0.12.12"
sqlalchemy2-stubs = "^0.0.2a38"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
