[project]
name = "bancho-py"
version = "5.3.0"
description = "An osu! server implementation optimized for maintainability in modern python"
authors = [{ name = "Akatsuki Team" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "async-timeout==4.0.3",
    "bcrypt==4.1.2",
    "datadog==0.48.0",
    "fastapi==0.109.2",
    "orjson==3.11.6",
    "psutil==5.9.8",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "requests==2.33.0",
    "timeago==1.0.16",
    "uvicorn==0.27.1",
    "uvloop==0.19.0 ; sys_platform != 'win32'",
    "winloop==0.1.1 ; sys_platform == 'win32'",
    "py3rijndael==0.3.3",
    "pytimeparse==1.1.8",
    "pydantic==2.6.1",
    "redis[hiredis]==5.0.1",
    "sqlalchemy>=1.4.42,<1.5",
    "akatsuki-pp-py==1.0.5",
    "cryptography==48.0.1",
    "tenacity==8.2.3",
    "httpx==0.26.0",
    "py-cpuinfo==9.0.0",
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "asgi-lifespan==2.1.0",
    "respx==0.20.2",
    "tzdata==2024.1",
    "coverage>=7.4.1,<8",
    "databases[mysql]>=0.8.0,<0.9",
    "python-json-logger>=2.0.7,<3",
    "anyio>=4.9.0,<5",
]

[tool.mypy]
strict = true
exclude = ["tests", "venv"]
disallow_untyped_calls = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
    "redundant-expr",
    "possibly-undefined"
]
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "pre-commit==3.6.1",
    "black==26.3.1",
    "isort==5.13.2",
    "autoflake==2.2.1",
    "types-psutil==5.9.5.20240205",
    "types-pymysql==1.1.0.1",
    "types-requests==2.31.0.20240125",
    "mypy==1.8.0",
    "types-pyyaml>=6.0.12.12,<7",
    "sqlalchemy2-stubs>=0.0.2a38,<0.0.3",
]

[[tool.mypy.overrides]]
module = [
    "aiomysql.*",
    "mitmproxy.*",
    "py3rijndael.*",
    "timeago.*",
    "pytimeparse.*",
    "cpuinfo.*",
]
ignore_missing_imports = true

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_requird_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_single_line = true
profile = "black"
