[project]
name = "bancho-py"
version = "5.3.0"
description = "An osu! server implementation optimized for maintainability in modern python"
authors = [{ name = "Akatsuki Team" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "async-timeout==5.0.1",
    "bcrypt==5.0.0",
    "datadog==0.52.1",
    "fastapi==0.138.0",
    "orjson==3.11.9",
    "psutil==7.2.2",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "requests==2.34.2",
    "timeago==1.0.16",
    "uvicorn==0.49.0",
    "uvloop==0.22.1 ; sys_platform != 'win32'",
    "winloop==0.1.1 ; sys_platform == 'win32'",
    "py3rijndael==0.3.3",
    "pytimeparse==1.1.8",
    "pydantic==2.13.4",
    "redis[hiredis]==8.0.0",
    "sqlalchemy>=2.0.51,<2.1",
    "akatsuki-pp-py==1.0.5",
    "cryptography==49.0.0",
    "tenacity==9.1.4",
    "httpx==0.28.1",
    "py-cpuinfo==9.0.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "asgi-lifespan==2.1.0",
    "respx==0.23.1",
    "tzdata==2026.2",
    "coverage>=7.14.2,<8",
    "databases[mysql]>=0.9.0,<0.10",
    "python-json-logger>=4.1.0,<5",
    "anyio>=4.9.0,<5",
]

[tool.mypy]
strict = true
exclude = ["tests", "venv"]
disallow_untyped_calls = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
    "redundant-expr",
    "possibly-undefined"
]
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "black==26.5.1",
    "isort==8.0.1",
    "autoflake==2.3.3",
    "types-psutil==7.2.2.20260518",
    "types-pymysql==1.1.0.20260518",
    "types-requests==2.33.0.20260518",
    "mypy==2.1.0",
    "types-pyyaml>=6.0.12.12,<7",
    "sqlalchemy2-stubs>=0.0.2a38,<0.0.3",
]

[[tool.mypy.overrides]]
module = [
    "aiomysql.*",
    "mitmproxy.*",
    "py3rijndael.*",
    "timeago.*",
    "pytimeparse.*",
    "cpuinfo.*",
]
ignore_missing_imports = true

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_requird_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_single_line = true
profile = "black"
